# NYX

./: .gitignore
soar/: ..env.swp  .env.example  .gitignore  DCD_module_SOAR(1).md  README.md  TESTING_GUIDE.md  planning-developpement-soar.md  pyproject.toml  requirements.txt
soar/config/: config.yaml
soar/docs/: step-00-environment-setup.md  step-01-models.md  step-02-settings.md  step-03-alert-parser.md  step-04-watcher.md  step-05-ip-cache.md  step-06-abuseipdb-client.md  step-07-opnsense-client.md  step-08-decision-engine.md  step-09-handlers.md  step-10-orchestrator.md  step-11-database.md  step-12-logging.md  step-13-notifications.md  step-14-main.md
soar/scripts/: cleanup_expired_rules.py  generate_report.py  rotate_logs.sh
soar/src/soar/: main.py
soar/src/soar/cache/: __init__.py  fallback_list.yaml  ip_cache.py
soar/src/soar/config/: __init__.py  config.yaml  settings.py
soar/src/soar/db/: __init__.py  connection.py
soar/src/soar/engine/: __init__.py  decision_engine.py  rules.py
soar/src/soar/handlers/: base_handler.py  core.py  handler.py  s3_handler.py  smb_handler.py  ssh_handler.py
soar/src/soar/integrations/: __init__.py  abuseipdb_client.py  base.py  opnsense_client.py
soar/src/soar/logging/: __init__.py  soar_log.py  (+2 more)
soar/tests/: conftest.py
soar/tests/integration/: test_opnsense_client.py
soar/tests/unit/: test_abuseipdb_client.py  test_alert_parser.py  test_alert_watcher.py  test_decision_engine.py  test_handlers.py  test_ip_cache.py  test_logging.py  test_main.py  test_notifier.py  test_orchestrator.py  test_repositories.py
(+163 files in other folders)
